# invest_agent

./: .gitignore  README.md  buffett_mvp_prompt.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  candidate_screener.py  fundamentals_analyst.py  input_supervisor.py  markdown_reporter.py  narrative_writer.py  news_intelligence.py  risk_assessment.py  strategy_synthesis.py  summary_agent.py  tool_reasoning.py  valuation_model.py
graph/: __init__.py  orchestrator.py
nlp/: __init__.py  news_pipeline.py
reports/: 20251109_AVGO.md  20251109_BAC.md  20251109_CLS.md  20251109_MSFT.md  20251109_TSM.md
tests/: conftest.py  test_e2e.py  test_nlp_news.py  test_tools_news.py  test_valuation.py
tools/: __init__.py  mcp_yfinance.py  yfinance_client.py
valuation/: __init__.py  dcf.py  multiples.py
